# hdx-scraper-sentinelasia

./: README.md  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py
.github/workflows/: publish.yaml  run-python-script.yaml
src/hdx/scraper/sentinelasia/: __main__.py  pipeline.py  sentinelasia.py
src/hdx/scraper/sentinelasia/config/: hdx_dataset_static.yaml  project_configuration.yaml
tests/: conftest.py  test_sentinelasia.py
tests/fixtures/input/: get-countries.json  get-events-countryiso3s-lao-start-date-20240101.json  get-metadata.json
